--- a/v4_html_con_menus_javascript/partial/sidebar.html
+++ b/v4_html_con_menus_javascript/partial/sidebar.html
@@ -1,6 +1,6 @@
 <ul id="sidebar_top_home"  style="    background-color: black;">   
   <a  id="sidebar_home_link" href= "#">
-    <li style="    padding: 15px; padding-left: 22px;">
+    <li style="    padding: 15px; padding-left: 22px; line-height: 31px;">
       <i class="fas fa-home"></i>    
       <sidebar_link_title class="sidebar_link_title"> inicio </sidebar_link_title>  
     </li>
